Changed template inheritance, fix broken css style on stopwatch.js

--- a/static/css/stopwatch.css
+++ b/static/css/stopwatch.css
@@ -1,56 +1,50 @@
 div.elapsedTime {
 	display: flex;
 	justify-content: center;
+	position: relative;
 	width: 100%;
 	height: 10%;
 }
 
 div.elapsedTime p {
 	text-align: center;
-	font-size: 128px; 
+	font-size: 128px;
+	margin-top: 10px; 
 }
 
 div.elapsedLaps {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -40%);
+	position: relative;
 	width: 70%;
-	height: 25%;
+	left: 50%;
+	transform: translate(-50%, 0%);
 }
 
 div.elapsedLaps div.left {
-	/*background: blue;*/
-	position: absolute;
+	float: left;
 	width: 33.3%;
 	height: 100%;
-	top: 0;
-	left: 0;
 }
 
 div.elapsedLaps div.middle {
-	/*background: black;*/
-	position: absolute;
+	float: left;
 	width: 33.3%;
 	height: 100%;
-	top: 0;
-	left: 33.3%;
 }
 
 div.elapsedLaps div.right {
-	/*background: green;*/
-	position: absolute;
+	float: right;
 	width: 33.4%;
 	height: 100%;
-	top: 0;
-	left: 66.6%;
 }
 
 p.title {
+	position: relative;
 	text-align: center;
 	font-size: 30px;
 	font-family: 'Ubuntu', sans-serif;
 	font-weight: 400;
+	margin-top: 40px;
+	margin-bottom: -10px;
 }
 
 p.time {
